tests/snapshots/integration_test__tests__svelte-example-manifest.snap
---
source: tests/integration_test.rs
expression: manifest_output
---
{
  "TITLE": {
    "variants": {
      "def": {
        "symbol": {
          "Symbol": {
            "symbol": "TITLE",
            "import_path": "content.ts",
            "line": 2
          }
        },
        "inline_impl": "\"abcd\""
      },
      "v2": {
        "symbol": {
          "Symbol": {
            "symbol": "TITLE",
            "import_path": "wl.v2.ts",
            "line": 2
          }
        },
        "inline_impl": "\"This is V2\""
      }
    },
    "usages": [
      {
        "file": "./src/lib/index.ts",
        "line": 6,
        "column": 21
      }
    ]
  },
  "onclick": {
    "variants": {
      "def": {
        "symbol": {
          "Symbol": {
            "symbol": "onclick",
            "import_path": "store.ts",
            "line": 6
          }
        },
        "inline_impl": "function onclick() {\n  count.update((c) => c + 1);\n}"
      },
      "v2": {
        "symbol": {
          "Symlink": "def"
        },
        "inline_impl": "function onclick() {\n  count.update((c) => c + 1);\n}"
      }
    },
    "usages": [
      {
        "file": "./src/lib/index.ts",
        "line": 5,
        "column": 23
      }
    ]
  }
}
